Creating database connection and initial migration

--- a/SecurityApp.Web/appsettings.Development.json
+++ b/SecurityApp.Web/appsettings.Development.json
@@ -1,4 +1,12 @@
 {
+  "ApplicationSettings": {
+    "ConnectionString": "Server={0},{1};Initial Catalog={2};User ID={3};Password={4}",
+    "Server": "localhost",
+    "Port": "1433",
+    "Database": "SECURITYAPP_DB",
+    "UserId": "SA",
+    "PasswordDb": "secapp@2022"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
