Customer CRUD refactoring and security layer creation

--- a/SecurityApp.Web/appsettings.Development.json
+++ b/SecurityApp.Web/appsettings.Development.json
@@ -1,5 +1,8 @@
 {
   "ApplicationSettings": {
+    "Secret": "0e1ac395-89b3-4144-9bc6-ee732801b5f0",
+    "ExpireIn": 60,
+    "AuthAttempts": 5,
     "ConnectionString": "Server={0},{1};Initial Catalog={2};User ID={3};Password={4}",
     "Server": "localhost",
     "Port": "1433",
