--- a/SecurityApp.Web/SecurityApp.Web.csproj
+++ b/SecurityApp.Web/SecurityApp.Web.csproj
@@ -1,6 +1,12 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk.Web">
 
   <PropertyGroup>
+    <AssemblyVersion>1.0.0.0</AssemblyVersion>
+    <FileVersion>1.0.0.0</FileVersion>
+    <Version>1.0.0.0</Version>
+    <Copyright>Copyright ©  2023</Copyright>
+    <Company>GasqueIT</Company>
+    <Authors>Abel Gasque Lacerda Silva</Authors>
     <TargetFramework>net5.0</TargetFramework>
     <TypeScriptCompileBlocked>true</TypeScriptCompileBlocked>
     <TypeScriptToolsVersion>Latest</TypeScriptToolsVersion>
