--- a/SecurityApp.Web/ClientApp/package.json
+++ b/SecurityApp.Web/ClientApp/package.json
@@ -21,6 +21,7 @@
     "@angular/platform-browser": "^14.2.0",
     "@angular/platform-browser-dynamic": "^14.2.0",
     "@angular/router": "^14.2.0",
+    "@auth0/angular-jwt": "^5.1.2",
     "@popperjs/core": "^2.10.2",
     "bootstrap": "^5.1.0",
     "primeicons": "^6.0.1",
