--- a/SecurityApp.Web/ClientApp/tsconfig.json
+++ b/SecurityApp.Web/ClientApp/tsconfig.json
@@ -21,7 +21,9 @@
     "lib": [
       "es2020",
       "dom"
-    ]
+    ],
+    "strictNullChecks": true,
+    "strictPropertyInitialization": false
   },
   "angularCompilerOptions": {
     "enableI18nLegacyMessageIdFormat": false,
