new version with send mail.

--- a/SecurityApp.Web/appsettings.json
+++ b/SecurityApp.Web/appsettings.json
@@ -10,6 +10,13 @@
     "UserId": "SA",
     "PasswordDb": "secapp@2022"
   },
+  "MailMessageSettings": {
+    "Server": "smtp.office365.com",
+    "Port": 587,
+    "Username": "abelgasque20@outlook.com",
+    "Password": "abel1970",
+    "EnableSsl": true
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
