--- a/SecurityWebApp/ClientApp/tsconfig.json
+++ b/SecurityWebApp/ClientApp/tsconfig.json
@@ -1,4 +1,3 @@
-/* To learn more about this file see: https://angular.io/config/tsconfig. */
 {
   "compileOnSave": false,
   "compilerOptions": {
@@ -22,6 +21,10 @@
       "es2020",
       "dom"
     ],
+    "types": [
+      "node"
+    ],
+    "skipLibCheck": true,
     "strictNullChecks": true,
     "strictPropertyInitialization": false
   },
@@ -30,5 +33,12 @@
     "strictInjectionParameters": true,
     "strictInputAccessModifiers": true,
     "strictTemplates": true
-  }
+  },
+  "exclude": [
+    "node_modules",
+    "dist"
+  ],
+  "include": [
+    "src/**/*.ts"
+  ]
 }
