--- a/server/appsettings.json
+++ b/server/appsettings.json
@@ -4,11 +4,11 @@
     "ExpireIn": 60,
     "AuthAttempts": 5,
     "ConnectionString": "Server={0},{1};Initial Catalog={2};User ID={3};Password={4}",
-    "Server": "localhost",
+    "Server": "mssql-server",
     "Port": "1433",
-    "Database": "SECURITYAPP_DB",
+    "Database": "CORE_DB",
     "UserId": "SA",
-    "PasswordDb": "secapp@2022"
+    "PasswordDb": "serverApp@2025"
   },
   "Logging": {
     "LogLevel": {
