Update dotnet 5 to 9

--- a/server/Dockerfile
+++ b/server/Dockerfile
@@ -1,10 +1,10 @@
 # Etapa 1: Base para runtime
-FROM mcr.microsoft.com/dotnet/aspnet:5.0-focal AS base
+FROM mcr.microsoft.com/dotnet/aspnet:9.0 AS base
 WORKDIR /server
 EXPOSE 8080
 
 # Etapa 2: Build
-FROM mcr.microsoft.com/dotnet/sdk:5.0-focal AS build
+FROM mcr.microsoft.com/dotnet/sdk:9.0 AS build
 WORKDIR /server
 COPY . ./
 
