--- a/server/appsettings.Development.json
+++ b/server/appsettings.Development.json
@@ -4,17 +4,17 @@
     "ExpireIn": 60,
     "AuthAttempts": 5,
     "ConnectionString": "Server={0},{1};Initial Catalog={2};User ID={3};Password={4}",
-    "Server": "mssql-server",
+    "Server": "localhost",
     "Port": "1433",
-    "Database": "CORE_DB",
+    "Database": "CoreDb",
     "UserId": "SA",
     "PasswordDb": "serverApp@2025"
   },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
-      "Microsoft": "Warning",
-      "Microsoft.Hosting.Lifetime": "Information"
+      "Microsoft.AspNetCore": "Warning"
     }
-  }
+  },
+  "AllowedHosts": "*"
 }
