Create UserModel e BaseController

--- a/server/appsettings.json
+++ b/server/appsettings.json
@@ -3,12 +3,12 @@
     "Secret": "0e1ac395-89b3-4144-9bc6-ee732801b5f0",
     "ExpireIn": 60,
     "AuthAttempts": 5,
-    "ConnectionString": "Server={0},{1};Initial Catalog={2};User ID={3};Password={4}",
-    "Server": "mssql-server",
+    "Server": "localhost",
     "Port": "1433",
     "Database": "CoreDb",
     "UserId": "SA",
-    "PasswordDb": "serverApp@2025"
+    "PasswordDb": "serverApp@2025",
+    "ConnectionString": "Server={0},{1};Database={2};User Id={3};Password={4};TrustServerCertificate=True;"
   },
   "Logging": {
     "LogLevel": {
