Create image docker

--- a/appsettings.json
+++ b/appsettings.json
@@ -3,7 +3,7 @@
     "Secret": "0e1ac395-89b3-4144-9bc6-ee732801b5f0",
     "ExpireIn": 60,
     "AuthAttempts": 5,
-    "Server": "localhost",
+    "Server": "host.docker.internal",
     "Port": "1433",
     "Database": "CoreDb",
     "UserId": "SA",
