--- a/appsettings.Development.json
+++ b/appsettings.Development.json
@@ -6,6 +6,7 @@
     "Server": "localhost",
     "Port": "1433",
     "Database": "CoreDb",
+    "TenantDb": "TenantDb",
     "UserId": "SA",
     "PasswordDb": "Application@2025",
     "ConnectionString": "Server={0},{1};Database={2};User Id={3};Password={4};TrustServerCertificate=True;"
