--- a/appsettings.json
+++ b/appsettings.json
@@ -6,10 +6,12 @@
     "Server": "host.docker.internal",
     "Port": "1433",
     "Database": "CoreDb",
+    "TenantDb": "TenantDb",
     "UserId": "SA",
     "PasswordDb": "Application@2025",
     "ConnectionString": "Server={0},{1};Database={2};User Id={3};Password={4};TrustServerCertificate=True;"
   },
+
   "Logging": {
     "LogLevel": {
       "Default": "Information",
