Create refresh token

--- a/appsettings.json
+++ b/appsettings.json
@@ -1,7 +1,9 @@
 {
   "ApplicationSettings": {
     "Secret": "0e1ac395-89b3-4144-9bc6-ee732801b5f0",
+    "RefreshSecret": "190a02f6-3db5-4669-af14-5ea981de19fe",
     "ExpireIn": 60,
+    "ExpireDays": 7,
     "AuthAttempts": 5,
     "Server": "host.docker.internal",
     "Port": "1433",
