--- a/appsettings.json
+++ b/appsettings.json
@@ -6,14 +6,13 @@
     "ExpireDays": 7,
     "AuthAttempts": 5,
     "Server": "host.docker.internal",
-    "Port": "1433",
+    "Port": "5432",
     "Database": "CoreDb",
     "TenantDb": "TenantDb",
-    "UserId": "SA",
+    "UserId": "admin",
     "PasswordDb": "Application@2025",
-    "ConnectionString": "Server={0},{1};Database={2};User Id={3};Password={4};TrustServerCertificate=True;"
+    "ConnectionString": "Host={0};Port={1};Database={2};Username={3};Password={4};"
   },
-
   "Logging": {
     "LogLevel": {
       "Default": "Information",
