--- a/appsettings.Development.json
+++ b/appsettings.Development.json
@@ -6,12 +6,12 @@
     "ExpireDays": 7,
     "AuthAttempts": 5,
     "Server": "localhost",
-    "Port": "1433",
+    "Port": "5432",
     "Database": "CoreDb",
     "TenantDb": "TenantDb",
-    "UserId": "SA",
+    "UserId": "admin",
     "PasswordDb": "Application@2025",
-    "ConnectionString": "Server={0},{1};Database={2};User Id={3};Password={4};TrustServerCertificate=True;"
+    "ConnectionString": "Host={0};Port={1};Database={2};Username={3};Password={4};"
   },
   "Logging": {
     "LogLevel": {
