--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -31,8 +31,8 @@ jobs:
         username: ${{ secrets.DOCKER_USERNAME }}
         password: ${{ secrets.DOCKER_PASSWORD }}
 
-    - name: Build and push Docker image (branch master)
-      if: github.ref == 'refs/heads/master'
+    - name: Build and push Docker image (branch main)
+      if: github.ref == 'refs/heads/main'
       run: |
         docker build -t ${{ secrets.DOCKER_USERNAME }}/chat-api:latest .
         docker push ${{ secrets.DOCKER_USERNAME }}/chat-api:latest
