--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -34,13 +34,13 @@ jobs:
     - name: Build and push Docker image (branch main)
       if: github.ref == 'refs/heads/main'
       run: |
-        docker build -t ${{ secrets.DOCKER_USERNAME }}/chat-api:latest .
+        docker build --platform=linux/amd64 -t ${{ secrets.DOCKER_USERNAME }}/chat-api:latest .
         docker push ${{ secrets.DOCKER_USERNAME }}/chat-api:latest
 
     - name: Build and push Docker image (tagged release)
       if: startsWith(github.ref, 'refs/tags/')
       run: |
-        docker build -t ${{ secrets.DOCKER_USERNAME }}/chat-api:${{ github.ref_name }} .
+        docker build --platform=linux/amd64 -t ${{ secrets.DOCKER_USERNAME }}/chat-api:${{ github.ref_name }} .
         docker push ${{ secrets.DOCKER_USERNAME }}/chat-api:${{ github.ref_name }}
 
   report-status:
