--- a/appsettings.Development.json
+++ b/appsettings.Development.json
@@ -11,7 +11,7 @@
     "TenantDb": "TenantDb",
     "UserId": "admin",
     "PasswordDb": "Application@2025",
-    "ConnectionString": "Host={0};Port={1};Database={2};Username={3};Password={4};TrustServerCertificate=True;",
+    "ConnectionString": "Host={0};Port={1};Database={2};Username={3};Password={4};",
     "Redis": "localhost:6379"
   },
   "Logging": {
