--- a/appsettings.Development.json
+++ b/appsettings.Development.json
@@ -12,7 +12,8 @@
     "UserId": "admin",
     "PasswordDb": "Application@2025",
     "ConnectionString": "Host={0};Port={1};Database={2};Username={3};Password={4};",
-    "Redis": "localhost:6379"
+    "Redis": "localhost:6379",
+    "Rabbit": "localhost:5672"
   },
   "Logging": {
     "LogLevel": {
