--- a/appsettings.Development.json
+++ b/appsettings.Development.json
@@ -7,12 +7,12 @@
     "AuthAttempts": 5,
     "Server": "localhost",
     "Port": "5432",
-    "Database": "CoreDb",
-    "TenantDb": "TenantDb",
+    "Database": "core_db",
+    "TenantDb": "tenant_db",
     "UserId": "admin",
-    "PasswordDb": "Application@2025",
+    "PasswordDb": "admin",
     "ConnectionString": "Host={0};Port={1};Database={2};Username={3};Password={4};",
-    "Redis": "localhost:6379"
+    "Redis": "redis://default:default@localhost:6379"
   },
   "Logging": {
     "LogLevel": {
