--- a/appsettings.Development.json
+++ b/appsettings.Development.json
@@ -12,7 +12,7 @@
     "UserId": "admin",
     "PasswordDb": "admin",
     "ConnectionString": "Host={0};Port={1};Database={2};Username={3};Password={4};",
-    "Redis": "redis://default:default@localhost:6379"
+    "Redis": "localhost:6379,user=default,password=default"
   },
   "Logging": {
     "LogLevel": {
