--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -10,13 +10,10 @@ on:
 
 jobs:
   build-deploy:
-    name: Build Chat API Docker Image
     runs-on: ubuntu-latest
-    environment: production
 
     steps:
-    - name: Checkout Code
-      uses: actions/checkout@v2
+    - uses: actions/checkout@v2
 
     - name: Setup .NET SDK
       uses: actions/setup-dotnet@v3
@@ -28,6 +25,14 @@ jobs:
 
     - name: Run Tests
       run: dotnet test ChatApi.Tests/ChatApi.Tests.csproj --no-restore --verbosity normal
+
+    - name: Install Coverlet Console
+      run: dotnet tool install -g coverlet.console
+
+    - name: Run Coverlet Coverage
+      run: |
+        export PATH="$PATH:$HOME/.dotnet/tools"
+        coverlet ./bin/Debug/net9.0/ChatApi.Tests.dll --target "dotnet" --targetargs "test --no-build" --format "opencover"
 
     - name: Notify Discord (Build Started)
       run: |
