--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -31,6 +31,7 @@ jobs:
     name: Build Docker Image
     needs: test
     runs-on: ubuntu-latest
+    environment: production
 
     steps:
     - uses: actions/checkout@v2
