--- a/ChatApi/appsettings.Development.json
+++ b/ChatApi/appsettings.Development.json
@@ -5,12 +5,12 @@
     "ExpireIn": 60,
     "ExpireDays": 7,
     "AuthAttempts": 5,
-    "Server": "dpg-d203qfbe5dus73fsf03g-a.oregon-postgres.render.com",
+    "Server": "localhost",
     "Port": "5432",
     "Database": "core_db",
     "TenantDb": "tenant_db",
-    "UserId": "chat_db_u9ip_user",
-    "PasswordDb": "vVHKmPJzFCOO8i6bnA7UIp5bTpGysrW4",
+    "UserId": "admin",
+    "PasswordDb": "admin",
     "ConnectionString": "Host={0};Port={1};Database={2};Username={3};Password={4};",
     "Redis": "localhost:6379,user=default,password=default"
   },
